--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -189,7 +189,7 @@ de:
       filter: Kartenfilter
       map_view: Karte
       request: Neue Meldung
-      watch: Meldungen beobachten
+      watch: Beobachtung
 
   notes:
     create:
