--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -309,6 +309,7 @@ de:
         votes_html: "Bisher <span class='request-votes'>%{votes}</span> Unterstützungen"
         votes_under_min_req_html: "Bisher <span class='request-votes under-min-req'>%{votes}</span> Unterstützungen"
         votes_min_req: "(%{min_req} nötig)"
+        votes_hint_html: "<span class='glyphicon glyphicon-question-sign' rel='tooltip' title='Unterstützungen dienen nur als Indikator, ähnlich einer Umfrage. Die Prüfung auf Realisierbarkeit ist davon unabhängig und auch bei 20 Unterstützungen nicht garantiert!'></span>"
     index:
       empty_result: Es liegen keine Meldungen vor.
       title: Meldungen
@@ -354,8 +355,8 @@ de:
         title: Unterstützung
         text: Beschreibung
         hint:
-          text: 'Ihre Unterstützung sollten Sie insb. dann zeigen, wenn Sie eine Idee gut finden. Sie hilft den Kollegen zu erkennen, dass der Sachverhalt nicht nur auf einer Einzelmeinung beruht.'
-          warning_html: "Achtung: Dies dient nur als Indikator, ähnlich einer Umfrage. Die Prüfung auf Realisierbarkeit ist davon unabhängig und auch bei 20 Zustimmungen nicht garantiert!"
+          text: 'Ihre Unterstützung sollten Sie insbesondere dann zeigen, wenn Sie eine Idee gut finden. Sie hilft der Stadtverwaltung zu erkennen, dass der Sachverhalt nicht nur auf einer Einzelmeinung beruht.'
+          warning_html: "Achtung: Unterstützungen dienen nur als Indikator, ähnlich einer Umfrage. Die Prüfung auf Realisierbarkeit ist davon unabhängig und auch bei 20 Unterstützungen nicht garantiert!"
     mobile:
       <<: *votes
       create:
