--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -12,6 +12,7 @@ de:
   license: Lizenz
   locate: Ortung
   mobile: mobil
+  page_meta_description: "Melden Sie Probleme in der Infrastruktur der %{city_long}, die dann von der Stadtverwaltung bearbeitet werden."
   pagetitle: "%{name} – Portal zur Bürgerbeteiligung der %{city_long}"
   pagetitle_mobile_client: "%{name} – Portal zur Bürgerbeteiligung der %{city_long}"
   privacy: Datenschutz
@@ -334,7 +335,7 @@ de:
       not_content: Notfälle, komplexe städtebauliche oder verkehrsplanerische Sachverhalte und persönliche Anfragen (z. B. Adressänderungen oder Leistungsanträge) können hier nicht gemeldet werden. Bitte berücksichtigen Sie, dass Ihre Meldungen öffentlich abrufbar sind.
       news: Neuigkeiten
       start_content_one: "%{name} ist eine Plattform zum Melden von Problemen in der Infrastruktur der %{city_long}."
-      start_content_two: "%{name} will Ihnen helfen sich mit Ihrer Stadtverwaltung in Verbindung zu setzen."
+      start_content_two: "%{name} will Ihnen helfen sich mit der Stadtverwaltung in Verbindung zu setzen."
       start_content_three: Wir möchten Sie ermutigen, uns Probleme und Ideen zu Ihrem lokalen Umfeld mitzuteilen und deren Bearbeitung durch uns online zu verfolgen! Versuchen Sie doch gleich Ihre erste Meldung!
       news_content_one: "19.05.2017 – Das Portal %{name} wurde vollständig überarbeitet: Das Erscheinungsbild ist nun zeitgemäßer, die Bedienung einfacher und die Benutzerführung intuitiver als zuvor."
       news_content_two: "27.10.2015 – %{name} ist nun auch über eine Programmierschnittelle (API) ansprechbar: Somit können Apps von Drittanbietern problemlos mit dem Portal interagieren."
