Bugfix mobil: Liste von Meldungen an derselben Stelle

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -316,6 +316,8 @@ de:
       title: Meldungen
     mobile:
       <<: *requests
+      index:
+        title: Meldungen an dieser Stelle
     status:
       currently: aktuell bei
       since: seit
