Link auf statische Seite zum Datenschutz in mobilem Frontend ergänzt

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -110,6 +110,7 @@ de:
     report_problem: Problem melden
     report_tip: Tipp melden
     imprint: Impressum
+    privacy: Datenschutz
 
   placeholder:
     abuse: Bitte tragen Sie hier Ihre Missbrauchsmeldung ein.
