--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -21,6 +21,7 @@ de:
   pagetitle: "%{name} – Portal zur Bürgerbeteiligung der %{city_long}"
   pagetitle_mobile_client: "%{name} – Portal zur Bürgerbeteiligung der %{city_long}"
   privacy: Datenschutz
+  privacy_policy: Ich habe die Datenschutzerklärung nach der EU-DSGVO zur Kenntnis genommen und stimme der Verarbeitung meiner persönlichen Daten zu.
   promotion: Werbung
   success: Vielen Dank!
   share_request: ' Gerne können Sie Ihre Meldung aber bereits bekannt machen:'
@@ -62,6 +63,9 @@ de:
     models:
       note: interne Kommentare
       comment: Lob, Hinweise oder Kritik
+
+  attributes:
+    privacy_policy_accepted: Ich stimme zu
 
   # Statuses
   status:
