Ticket #3174: expected_closure auch in Clients anzeigen

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -41,6 +41,7 @@ de:
         description: Beschreibung
         author: E-Mail
         email: E-Mail
+        expected_closure: voraussichtlicher Abschluss
         media: Foto
         media_url: Foto
         service_code: Kategorie
