Upgrade: Ruby, Rails, usw.
* ruby '~> 3.0.1'
* rails '~> 6.1'
* font-awesome-rails statt glyphicons
* bootstrap 5.1
* puma statt passenger als default, Einbindung via passenger nach wie vor möglich

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -64,7 +64,7 @@ de:
             position:
               outside: befindet sich außerhalb des gültigen Bereichs
     models:
-      note: interne Kommentare
+      note: Interne Kommentare
       comment: Lob, Hinweise oder Kritik
 
   attributes:
@@ -273,8 +273,8 @@ de:
       new:
         title: KOD-Protokoll
         actions:
-          more_attachment: Anhang hinzufügen
-          send: senden
+          more_attachment: Weiteren Anhang hinzufügen
+          send: Senden
       create:
         success: KOD-Protokoll gesendet
 
