--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -342,6 +342,7 @@ de:
         actions:
           abuse: Missbrauch
           comment: Lob, Hinweise oder Kritik
+          completion: Abschluss
           edit: Meldung bearbeiten
           kod: KOD-Protokoll
           list: zurück zur Liste
