--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -199,7 +199,25 @@ de:
         success_text: Ihre Lob, Ihre Hinweise oder Ihre Kritik wird dem entsprechenden Empfänger zugestellt.
       new:
         <<: *comments
-
+  completions:
+    desktop: &completions
+      create:
+        error: Fehler bei Abschlussmeldung
+        success: Die Abschlussmeldung wurde erfolgreich abgesetzt. Sie erhalten in Kürze eine E-Mail, in der Sie Ihre Abschlussmeldung noch einmal bestätigen müssen.
+      new:
+        title: Abschluss
+        hint:
+          text: >
+            Hier können Sie die vorliegende Meldung als abgeschlossen melden, wenn der Gegenstand der Meldung
+            bereits abgearbeitet ist (z.B. gemeldeter Sperrmüllhaufen beseitigt, defekte Straßenbeleuchtung repariert).
+          warning: 'Achtung: Die Stadtverwaltung stellt den Zustand der Meldung vor Ihrer Abschlussmeldung wieder her,
+            falls diese nicht der Realität entspricht.'
+          privacy_html: "Mit Klick auf <em>Speichern</em> wird ein personenbezogenes Datum (die von Ihnen eingetragene E-Mail-Adresse) übermittelt und für die in der Datenschutzerklärung beschriebenen Zwecke verwendet."
+    mobile:
+      <<: *completions
+      create:
+        success: Abschlussmeldung erfolgreich abgesetzt
+        error: Fehler bei Abschlussmeldung
   jobs:
     index:
       empty_result: Für heute liegen keine Aufträge vor.
